--- a/KNN_first project/final_project_eng.ipynb
+++ b/KNN_first project/final_project_eng.ipynb
@@ -482,7 +482,7 @@
         "id": "WaBlAVsfZSSL"
       },
       "source": [
-        "In this step we're validating our method of computing distance."
+        "In this step we're validating our method of computing distance"
       ]
     },
     {
@@ -728,15 +728,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "BMcKs_WkMGNP"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ysuUKK-HZDdl"
@@ -824,7 +815,7 @@
         "id": "g3elyRwpZDdn"
       },
       "source": [
-        "Проверим, как хорошо работает лучшее значение k на тестовых данных (test data)"
+        "Lets check our best k on test data"
       ]
     },
     {
@@ -875,7 +866,7 @@
         "id": "FaLQTImqXoUr"
       },
       "source": [
-        "Now we're ready fpr classification of whole set of numbers"
+        "Now we're ready for classification of whole set of numbers"
       ]
     },
     {
