--- a/0. KNN_first project/final_project_eng.ipynb
+++ b/0. KNN_first project/final_project_eng.ipynb
@@ -148,7 +148,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "22222it [01:31, 244.09it/s]\n"
+            "22222it [00:36, 605.32it/s]\n"
           ]
         },
         {
@@ -162,7 +162,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "7847it [00:30, 254.89it/s]\n"
+            "7847it [00:31, 250.80it/s]\n"
           ]
         }
       ],
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "Qn5LXNMIZDde"
       },
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -268,7 +268,7 @@
               "(121, 3072)"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "fTrUbRTbYOkn"
       },
@@ -466,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "TSxj-2sKYncX"
       },
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "PCynlyn_ZDdh"
       },
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "0EIUa71yZDdi"
       },
@@ -511,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "QJk3FT-KZDdi"
       },
@@ -523,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -536,9 +536,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1.06 s ± 12 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-            "8.96 ms ± 1.43 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-            "5.2 ms ± 47.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+            "The slowest run took 4.91 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "2.61 s ± 1.83 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+            "15.4 ms ± 964 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+            "5.44 ms ± 1.03 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
           ]
         }
       ],
@@ -561,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -577,7 +578,7 @@
               "       False,  True,  True,  True,  True, False, False])"
             ]
           },
-          "execution_count": 108,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -598,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "5vpUQMcgawWa"
       },
@@ -658,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -696,7 +697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -749,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -820,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -871,7 +872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "cTayszopZDdo"
       },
@@ -896,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -915,7 +916,7 @@
               "       1, 4, 1, 4, 2, 8, 1, 7, 3, 3, 0, 4], dtype=int32)"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -936,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "GPeKoHPHcqy5"
       },
@@ -961,7 +962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -994,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
