--- a/1. Parameter tweaking/Heart_Attack_Analysis.ipynb
+++ b/1. Parameter tweaking/Heart_Attack_Analysis.ipynb
@@ -107,19 +107,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [],
       "source": [
         "#for local\n",
         "import zipfile\n",
-        "with zipfile.ZipFile(\"/Users/Misha/Documents/Python/edu-proj/1. Parameter tweaking/archive.zip\", 'r') as zip_ref:\n",
-        "    zip_ref.extractall(\"/Users/Misha/Documents/Python/edu-proj/1. Parameter tweaking\")"
+        "with zipfile.ZipFile(\"/Users/Misha/Documents/Python/storage/archive.zip\", 'r') as zip_ref:\n",
+        "    zip_ref.extractall(\"/Users/Misha/Documents/Python/storage\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 155,
       "metadata": {
         "id": "94vTEIyHY7fP"
       },
@@ -128,7 +128,7 @@
         "#for colab version\n",
         "#df = pd.read_csv('/content/heart.csv')\n",
         "#for local\n",
-        "df = pd.read_csv(\"heart.csv\")"
+        "df = pd.read_csv(\"/Users/Misha/Documents/Python/storage/heart.csv\")"
       ]
     },
     {
